--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
+    "react-vertical-timeline-component": "^3.5.3",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
