--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.2",
     "react-vertical-timeline-component": "^3.5.3",
+    "recharts": "^2.15.0",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10",
     "swiper": "^11.2.1"
